--- a/public/site.css
+++ b/public/site.css
@@ -8,7 +8,7 @@
   color: #ffffff;
   z-index: 1 !important;
   padding: 6px;
-  font-weight: bold;
+  font: Arial;
 }
 
 .mapContainer {
@@ -28,3 +28,19 @@
   cursor: pointer;
 }
 
+.marker-zoomed {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='18' height='18'><circle cx='9' cy='9' r='9'  fill='rgb(255, 140, 0)' /></svg>");
+  background-size: cover;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.marker-direction {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='20' ><polygon points='0,20 8,0 16,20'  fill='rgb(255, 140, 0)'  /></svg>");
+  background-size: cover;
+  width: 16px;
+  height: 20px;
+  cursor: pointer;
+}
