--- a/public/site.css
+++ b/public/site.css
@@ -44,3 +44,13 @@
   height: 20px;
   cursor: pointer;
 }
+
+.marker-grouped {
+  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20' height='20'><circle cx='20' cy='20' r='20'  fill='rgb(255, 140, 0)' /></svg>");
+  background-size: cover;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  font-weight: bold;
+  cursor: pointer;
+}
